# Adunis

./: Cargo.toml  DesignSpec.md  LICENSE  List.md  README.md  TechList.md
src/: app.rs  main.rs  menufront_main.rs  menuinterface_main.rs
src/menu/: button_expand.rs  main_backend.rs  main_frontend.rs  main_frontend_collection.rs  main_interface.rs  mod.rs
