[package]
name = "adunis"
version = "0.1.4"
edition = "2021"

[dependencies]
eframe = "0.16"
egui = "0.16"
egui_glow = "0.16"
epi = "0.16"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["persistence"]
persistence = ["egui/persistence", "epi/persistence", "serde"]